<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">Error occurred. Please try again.</string>
    <string name="title_sort_by_toprated">Top Rated</string>
    <string name="title_sort_by_popular">Popular</string>
    <string name="title_sort_by">Sort by …</string>
    <string name="original_language">Original Language</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="plot">Plot</string>
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="movie_poster">Movie poster</string>
</resources>
